1) Added bookmark folder editing... this basically makes this extension a graphical bookmark manager lol. It wasn't my intent or anything, but the folder edit & delete buttons were actually still there and were only kind of visible on mouseover.  So I just decided to hook things up and basically complete our Bookmark API usage. I fixed some dialogs and make things more contextual for what the action being done was.
2) Completed usage/migration to using icon fonts, so no images in /images are needed anymore :) Now both the folder and + sign icons are being scaled and used nicely unlike before, this helps RAM usage quite a bit as well, so now all the graphics are actually from the .woff font file, and the newtab page load speed is 40ms faster than before :D

--- a/css/newtab.css
+++ b/css/newtab.css
@@ -50,16 +50,6 @@ div {
 	color: #444;
 }
 
-
-.bookmark img {
-	display: block;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	clear: both;
-	float: left;
-	width: 100%;
-}
-
 .bookmark .imgwrapper {
 	overflow: hidden;
 }
@@ -114,18 +104,7 @@ div {
 	opacity: 0.25;
 }
 
-.entry .foldericon {
-	font-size: 8em;
-	text-decoration: none;
-}
-
-
-#new_entry {
-	display: none;
-}
-
 #new_entry div {
-	background: url('/images/add.png') 50% 50% no-repeat;
 	background-color: #aaa;
 	border-radius: 5px;
 	display: block;
@@ -136,6 +115,10 @@ div {
 	border: 1px solid #888;
 	margin: -1px;
 	box-shadow: 0 0 5px #444;
+}
+
+.foundicon-folder, .foundicon-plus {
+	position: relative;
 }
 
 #bookmark_form h1 {
